# testi2c

./: Makefile.am  README.md  configure.ac  i2cexample.c
